feat: add @OneToMany, @ManyToOne relations to artist/album/track
