# src/routes/album/album.module.ts
@@ -1,13 +1,12 @@
 import { Module } from '@nestjs/common';
 import { TypeOrmModule } from '@nestjs/typeorm';
 import { ArtistModule } from '../artist/artist.module';
-import { TrackModule } from '../track/track.module';
 import { AlbumController } from './album.controller';
 import { AlbumService } from './album.service';
 import { Album } from './entities/album.entity';
 
 @Module({
-  imports: [TypeOrmModule.forFeature([Album]), TrackModule, ArtistModule],
+  imports: [TypeOrmModule.forFeature([Album]), ArtistModule],
   providers: [AlbumService],
   controllers: [AlbumController],
   exports: [AlbumService],
