# src/routes/album/entities/album.entity.ts
@@ -1,8 +1,16 @@
-import { IAlbum } from 'src/types';
-import { Entity, Column, PrimaryGeneratedColumn } from 'typeorm';
+import { Artist } from 'src/routes/artist/entities/artist.entity';
+import { Track } from 'src/routes/track/entities/track.entity';
+import {
+  Entity,
+  Column,
+  PrimaryGeneratedColumn,
+  ManyToOne,
+  JoinColumn,
+  OneToMany,
+} from 'typeorm';
 
 @Entity()
-export class Album implements IAlbum {
+export class Album {
   @PrimaryGeneratedColumn('uuid')
   id: string;
 
@@ -14,4 +22,14 @@ export class Album implements IAlbum {
 
   @Column({ nullable: true })
   artistId: string | null;
+
+  @ManyToOne(() => Artist, (artist) => artist.albums, {
+    cascade: true,
+    onDelete: 'SET NULL',
+  })
+  @JoinColumn({ name: 'artistId' })
+  artist: Artist;
+
+  @OneToMany(() => Track, (track) => track.album)
+  tracks: Track[];
 }
