# src/routes/artist/artist.module.ts
@@ -1,13 +1,12 @@
 import { Module } from '@nestjs/common';
 import { TypeOrmModule } from '@nestjs/typeorm';
-import { TrackModule } from '../track/track.module';
 import { ArtistController } from './artist.controller';
 import { ArtistService } from './artist.service';
 
 import { Artist } from './entities/artist.entity';
 
 @Module({
-  imports: [TypeOrmModule.forFeature([Artist]), TrackModule],
+  imports: [TypeOrmModule.forFeature([Artist])],
   providers: [ArtistService],
   controllers: [ArtistController],
   exports: [ArtistService],
