# src/routes/track/entities/track.entity.ts
@@ -1,8 +1,15 @@
-import { ITrack } from 'src/types';
-import { Entity, Column, PrimaryGeneratedColumn } from 'typeorm';
+import { Album } from 'src/routes/album/entities/album.entity';
+import { Artist } from 'src/routes/artist/entities/artist.entity';
+import {
+  Entity,
+  Column,
+  PrimaryGeneratedColumn,
+  JoinColumn,
+  ManyToOne,
+} from 'typeorm';
 
 @Entity()
-export class Track implements ITrack {
+export class Track {
   @PrimaryGeneratedColumn('uuid')
   id: string;
 
@@ -17,4 +24,18 @@ export class Track implements ITrack {
 
   @Column()
   duration: number;
+
+  @ManyToOne(() => Artist, (artist) => artist.tracks, {
+    cascade: true,
+    onDelete: 'SET NULL',
+  })
+  @JoinColumn({ name: 'artistId' })
+  artist: Artist;
+
+  @ManyToOne(() => Album, (album) => album.tracks, {
+    cascade: true,
+    onDelete: 'SET NULL',
+  })
+  @JoinColumn({ name: 'albumId' })
+  album: Album;
 }
