# src/routes/track/track.service.ts
@@ -12,22 +12,6 @@ export class TrackService {
     private tracksRepository: Repository<Track>,
   ) {}
 
-  async clearArtist(id: string) {
-    const tracks = await this.tracksRepository.findBy({ artistId: id });
-
-    for (const track of tracks) {
-      await this.update(track.id, { artistId: null });
-    }
-  }
-
-  async clearAlbum(id: string) {
-    const tracks = await this.tracksRepository.findBy({ albumId: id });
-
-    for (const track of tracks) {
-      await this.update(track.id, { albumId: null });
-    }
-  }
-
   async create(dto: CreateTrackDto) {
     return await this.tracksRepository.save(dto);
   }
